--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "timer",
+  "homepage": "https://alexandr010.github.io/timer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +8,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "dayjs": "^1.10.7",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
